--- a/css/menu.css
+++ b/css/menu.css
@@ -10,7 +10,7 @@
 .menu-left,
 .menu-right {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 50%;
     height: 100vh;
     background-color: #000;
@@ -54,7 +54,6 @@
 
 .menu-open,
 .menu-close {
-    z-index: 1;
     top: 2rem;
     right: 2rem;
     font-size: 30px;
@@ -67,12 +66,14 @@
 
 .menu-open {
     position: fixed;
+    z-index: 1;
     opacity: 0;
     transition: opacity 150ms ease-in;
 }
 
 .menu-close {
     position: absolute;
+    z-index: 2;
 }
 
 @media screen and (max-width: 900px) {
